# vector-store-uploader

./: LICENSE  README.md  package-lock.json  package.json
.github/workflows/: build.yaml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/embeddings/: creator.rs  mod.rs
src-tauri/src/pdf/: mod.rs  processor.rs
src-tauri/src/settings/: manager.rs  mod.rs
src-tauri/src/storage/: mod.rs  pinecone.rs
src/components/: FileUploader.tsx  SettingsDialog.tsx
src/types/: settings.ts
src/utils/: store.ts
